--- a/aws-usage-report/aws-usage-report.qmd
+++ b/aws-usage-report/aws-usage-report.qmd
@@ -23,8 +23,9 @@ The main costs of running the JupyterHub come from two sources:
 2. Storage using AWS EFS, via storage in users' home directories
 
 Compute costs scale up and down as the Hub is used, however storage costs are 
-fixed - we pay for "data at rest", with ongoing daily costs/GB even while the Hub is
-not running.
+fixed - we pay for "data at rest", with 
+[ongoing daily costs/GB](https://aws.amazon.com/efs/pricing/) even while the 
+Hub is not running.
 
 Storing large amounts of data in the cloud can incur significant ongoing costs if not done optimally. We are developing [technical strategies and policies](https://nasa-openscapes.github.io/earthdata-cloud-cookbook/policies-admin/data-policies.html) to reduce storage costs that will keep the Openscapes 2i2c Hub a shared resource for us all to use, while also providing reusable strategies for other admins.
 
@@ -71,7 +72,13 @@ theme_set(theme_classic())
 
 ## Month over month changes
 
+A comparison of monthly costs in the Hub can help us to compare usage over time
+and identify longer-term patterns. We can query the [AWS Cost Explorer API](https://docs.aws.amazon.com/aws-cost-management/latest/APIReference/API_Operations_AWS_Cost_Explorer_Service.html) to explore these costs.
+
 ### Total Costs
+
+The following plot shows the total monthly costs of all AWS services related to 
+the Hub, as well as a breakdown of costs by service each month.
 
 ```{r total-costs}
 
@@ -161,6 +168,17 @@ total_monthly_cost_plot / monthly_cost_by_service_plot
 
 ### Storage
 
+Managing storage is an effective way to manage long-term costs in the Hub, as 
+data-at-rest is an ongoing cost, much of which can be avoided by monitoring and
+reducing storage of data that is not required.
+
+User home directories are in an AWS ["Elastic File System" (EFS)](https://aws.amazon.com/efs/) mount, which is 
+a relatively expensive option for long-term storage of large files. The 
+following figure plots the daily total size of data storage in the user home
+directories in the Hub over the past six months. The size of the home drives
+is directly correlated with the costs for "Amazon Elastic File System" in the 
+previous chart. 
+
 ```{r}
 monthly_size <- query_prometheus_range(
   query = "max(dirsize_total_size_bytes{namespace='prod'})",
@@ -173,6 +191,7 @@ monthly_size <- query_prometheus_range(
 monthly_size |> 
 ggplot() +
   geom_line(aes(x = date, y = size)) +
+  scale_x_datetime(date_breaks = "1 month", date_labels = "%B") + 
   labs(
     title = "Total size of user home directories in AWS EFS\nin the main Hub",
     x = "Month",
@@ -180,9 +199,27 @@ ggplot() +
   )
 ```
 
-## Detailed breakdown for the month of `r format(start_date, "%B")`
+## Detailed breakdown for the month of `r reporting_month`
+
+To understand more about usage and costs during the current month, 
+we can look at daily usage metrics and costs.
 
 ### Home directory sizes
+
+The Hub can currently be accessed via two different "namespaces": "production" 
+(or "prod"), and "workshop". The production namespace is where participants are
+given medium to long-term access, as NASA mentors, Champions participants, etc. 
+[Access is managed via GitHub](https://nasa-openscapes.github.io/earthdata-cloud-cookbook/policies-admin/add-folks-to-2i2c-github-teams.html) by assigning user's GitHub usernames to specific 
+teams. 
+
+The workshop namespace is used specifically for large workshops and access
+is granted on the day of the workshop by use of a shared password rather
+than using GitHub teams. Access is short-term and usually revoked a week after
+the workshop, at which point users' home directories are removed.
+
+The following figure shows the total size of home directories by namespace. Note
+the different y axis scales in each panel. The "prod" namespace panel is broken
+out by access team (Long-Term Access and NASA Champions 2024).
 
 ```{r homedir-size-by-date}
 size_by_date <- query_prometheus_range(
@@ -247,6 +284,7 @@ all_dirs_sum_by_date <- size_by_date |>
   )
 ```
 
+
 ```{r homedir-size-over-time}
 all_dirs_sum_by_date |>
   ggplot(aes(x = date, y = total_size_gb)) +
@@ -261,12 +299,20 @@ all_dirs_sum_by_date |>
   )
 ```
 
+#### Champions cohort
+
+It is also helpful to look more deeply into the Champions cohort to see how
+they are using the Hub, and how much storage is being used. The following
+figure breaks down the home directory size of Champions by user - usernames
+are not displayed, but we can see if any users are using a disproportionate amount
+of space.
+
 ```{r homedir-size-champions}
 size_by_date |>
   filter(team == "NASA Champions 2024") |>
   ggplot(aes(x = date, y = size, fill = directory)) +
   geom_area() +
-  paletteer::scale_fill_paletteer_d("khroma::soil", guide = "none") +
+  paletteer::scale_fill_paletteer_d("khroma::soil", guide = "none", direction = -1) +
   labs(
     title = "Size of home directories by user for 2024 Champions cohort",
     x = "Date",
@@ -276,6 +322,16 @@ size_by_date |>
 ```
 
 ### Compute costs and usage
+
+When a user logs into the Hub, they can choose the amount of RAM and number of
+CPUs they would like to use, enabling them to scale computing power appropriate
+to the tasks they are running. More powerful compute resources have higher 
+[hourly costs](https://aws.amazon.com/ec2/pricing/on-demand/), so it is 
+important to not choose a powerful instance when it isn't required.
+
+Examining both the usage and the costs of the instance types that users choose 
+can help us understand users's needs as well as compute costs. This helps us 
+develop policies and recommendations for Hub compute usage.
 
 ```{r ec2-costs}
 # https://www.paws-r-sdk.com/docs/costexplorer_get_cost_and_usage/
@@ -330,8 +386,20 @@ instance_palette <- paletteer::paletteer_d(
   setNames(instances)
 ```
 
+The following plots show the usage and costs broken down by instance type. The 
+compute profiles that users can choose from run on `r5.xlarge` or 
+`r5.4xlarge` instances. Note that during some large workshops, administrators 
+choose very large instance types (for example `r5.16xlarge`) so they can 
+provision a small number of nodes with many users per node. This is more 
+efficient than launching many nodes at once. Other instance types, such as
+`m6i.xlarge` indicate usage of the AWS infrastructure outside of the Hub, mostly
+using [coiled](https://openscapes.org/blog/2023-11-07-coiled-openscapes/).
+
+<!-- TODO: Get workshops dates from workshop spreadsheet and overlay on these
+charts -->
+
 ```{r daily-usage-by-instance}
-ec2_instance_type_costs_usage |>
+ec2_usage_plot <- ec2_instance_type_costs_usage |>
   mutate(instance_type = fct_reorder(instance_type, desc(UsageQuantity), .fun = max, .desc = TRUE)) |>
   ggplot(aes(x = start_date, y = UsageQuantity, fill = instance_type)) +
   geom_col() +
@@ -345,7 +413,7 @@ ec2_instance_type_costs_usage |>
 ```
 
 ```{r daily-cost-by-instance}
-ec2_instance_type_costs_usage |>
+ec2_cost_plot <- ec2_instance_type_costs_usage |>
   mutate(instance_type = fct_reorder(instance_type, desc(UnblendedCost), .fun = max, .desc = TRUE)) |>
   ggplot(aes(x = start_date, y = UnblendedCost, fill = instance_type)) +
   geom_col() +
@@ -358,6 +426,14 @@ ec2_instance_type_costs_usage |>
   )
 ```
 
+```{r patchwork-plot-ec2-usage-cost}
+ec2_usage_plot / ec2_cost_plot
+```
+
+Finally, it is useful to look at the relationship between compute hours and
+total cost by instance type, to understand both the highest cost and highest 
+usage, as well as the cost-efficiency of the instance types.
+
 ```{r total-usage-vs-cost-by-instance}
 ec2_instance_type_costs_usage |>
   group_by(instance_type) |>
@@ -366,7 +442,7 @@ ec2_instance_type_costs_usage |>
     total_cost = sum(UnblendedCost)
   ) |>
   ggplot(aes(x = total_hours, y = total_cost, colour = instance_type)) +
-  geom_point(size = 5) +
+  geom_point(size = 3) +
   scale_colour_manual(values = instance_palette) +
   labs(
     title = glue::glue(
