--- a/aws-usage-report/aws-usage-report.qmd
+++ b/aws-usage-report/aws-usage-report.qmd
@@ -6,12 +6,12 @@ subtitle: "Monthly report for `r format(lubridate::ym(params$year_month), '%B %Y
 format: pdf
 ---
 
-<!-- 
+<!--
 To render this using the quarto cli use:
 
 ym="2024-06" # set the year and month parameter
 quarto render aws-usage-report/aws-usage-report.qmd -P year_month:$ym --output "aws-usage-report_$ym.pdf"
- -->
+-->
 
 ## Introduction
 
@@ -22,14 +22,14 @@ The main costs of running the JupyterHub come from two sources:
 1. Compute, using AWS EC2
 2. Storage using AWS EFS, via storage in users' home directories
 
-Compute costs scale up and down as the Hub is used, however storage costs are 
-fixed - we pay for "data at rest", with 
-[ongoing daily costs/GB](https://aws.amazon.com/efs/pricing/) even while the 
+Compute costs scale up and down as the Hub is used, however storage costs are
+fixed - we pay for "data at rest", with
+[ongoing daily costs/GB](https://aws.amazon.com/efs/pricing/) even while the
 Hub is not running.
 
 Storing large amounts of data in the cloud can incur significant ongoing costs if not done optimally. We are developing [technical strategies and policies](https://nasa-openscapes.github.io/earthdata-cloud-cookbook/policies-admin/data-policies.html) in the Earthdata Cloud Cookbook to reduce storage costs that will keep the Openscapes 2i2c Hub a shared resource for us all to use, while also providing reusable strategies for other admins.
 
-This report is intended to give a monthly summary of usage of the Hub and its 
+This report is intended to give a monthly summary of usage of the Hub and its
 resources, by tracking metrics on costs and usage of key components of storage (EFS)
 and compute (EC2).
 
@@ -45,6 +45,8 @@ library(paws)
 library(here)
 library(glue)
 library(patchwork)
+library(sixtyfour)
+library(ggtext)
 
 knitr::opts_chunk$set(
   echo = FALSE,
@@ -67,7 +69,14 @@ reporting_my <- format(start_date, "%B %Y")
 
 cost_explorer <- paws::costexplorer()
 
-theme_set(theme_classic())
+theme_set(
+  theme_classic() +
+  theme(
+    plot.title = element_textbox_simple(),
+    plot.subtitle = element_textbox_simple(),
+    plot.caption = element_textbox_simple(halign = 1)
+    )
+)
 ```
 
 ## Month over month changes
@@ -77,33 +86,37 @@ and identify longer-term patterns. We can query the [AWS Cost Explorer API](http
 
 ### Total Costs
 
-The following plot shows the total monthly costs of all AWS services related to 
+The following plot shows the total monthly costs of all AWS services related to
 the Hub, as well as a breakdown of costs by service each month.
 
 ```{r total-costs}
 
 # https://www.paws-r-sdk.com/docs/costexplorer_get_cost_and_usage/
 # https://docs.aws.amazon.com/aws-cost-management/latest/APIReference/API_GetDimensionValues.html
-total_monthly_usage_costs <- cost_explorer$get_cost_and_usage(
-  TimePeriod = list(Start = ceiling_date(end_date %m-% months(6), unit = "month"), End = end_date),
-  Granularity = "MONTHLY",
-  Filter = list(Dimensions = list(
+all_daily_costs_six_months <- sixtyfour::aws_billing(ceiling_date(end_date %m-% months(6), unit = "month"), end_date, filter = list(Dimensions = list(
     Key = "RECORD_TYPE",
     Values = "Usage"
-  )),
-  Metrics = "UnblendedCost"
-) |>
-  ce_to_df()
+  )))
 
-total_monthly_cost <- total_monthly_usage_costs$UnblendedCost[
+total_monthly_usage_costs <- all_daily_costs_six_months |>
+    filter(id == "unblended") |>
+    mutate(
+      date = ymd(date),
+      start_date = floor_date(date, unit = "month"),
+      end_date = ceiling_date(date, unit = "month")
+      ) |>
+    group_by(start_date, end_date) |>
+    summarise(cost = sum(cost))
+
+total_monthly_cost <- total_monthly_usage_costs$cost[
   total_monthly_usage_costs$start_date == start_date
 ]
 
 total_monthly_cost_plot <- ggplot(total_monthly_usage_costs) +
-  geom_line(aes(x = start_date, y = UnblendedCost)) +
+  geom_line(aes(x = start_date, y = cost)) +
   labs(
     title = glue::glue(
-      "The total cost of all AWS Services for running the NASA\n Openscapes 2i2c",
+      "The total cost of all AWS Services for running the NASA Openscapes 2i2c",
       "Hub in {reporting_my} was ${round(total_monthly_cost)}"
     ),
     x = "Month",
@@ -114,22 +127,15 @@ total_monthly_cost_plot <- ggplot(total_monthly_usage_costs) +
 ```{r monthly-costs-by-service}
 #| fig-height: 7
 
-monthly_costs_by_service <- cost_explorer$get_cost_and_usage(
-  TimePeriod = list(Start = ceiling_date(end_date %m-% months(6), unit = "month"), End = end_date),
-  Granularity = "MONTHLY",
-  Filter = list(Dimensions = list(
-    Key = "RECORD_TYPE",
-    Values = "Usage"
-  )),
-  Metrics = "UnblendedCost",
-  GroupBy = list(
-    list(
-      Type = "DIMENSION",
-      Key = "SERVICE"
-    )
-  )
-) |>
-  ce_to_df()
+monthly_costs_by_service <- all_daily_costs_six_months |>
+    filter(id == "unblended") |>
+    mutate(
+      date = ymd(date),
+      start_date = floor_date(date, unit = "month"),
+      end_date = ceiling_date(date, unit = "month")
+      ) |>
+    group_by(start_date, end_date, service) |>
+    summarise(cost = sum(cost))
 
 monthly_cost_service_summary <- monthly_costs_by_service |>
   ce_categories() |>
@@ -151,7 +157,7 @@ monthly_cost_by_service_plot <- ggplot(
   ) +
   labs(
     title = "Monthly cost of AWS Services",
-    subtitle = "Largest costs are EC2 compute (blue) and EFS (home directory)\n storage (red)",
+    subtitle = "Largest costs are EC2 compute (blue) and EFS (home directory) storage (red)",
     caption = "*The top nine services are shown individually, with any remaining grouped into 'Other'",
     x = "Month",
     y = "Monthly cost ($)",
@@ -164,16 +170,16 @@ total_monthly_cost_plot / monthly_cost_by_service_plot
 
 ### Storage
 
-Managing storage is an effective way to manage long-term costs in the Hub, as 
+Managing storage is an effective way to manage long-term costs in the Hub, as
 data-at-rest is an ongoing cost, much of which can be avoided by monitoring and
 reducing storage of data that is not required.
 
-User home directories are in an AWS ["Elastic File System" (EFS)](https://aws.amazon.com/efs/) mount, which is 
-a relatively expensive option for long-term storage of large files. The 
+User home directories are in an AWS ["Elastic File System" (EFS)](https://aws.amazon.com/efs/) mount, which is
+a relatively expensive option for long-term storage of large files. The
 following figure plots the daily total size of data storage in the user home
 directories in the Hub over the past six months. The size of the home drives
-is directly correlated with the costs for "Amazon Elastic File System" in the 
-previous chart. 
+is directly correlated with the costs for "Amazon Elastic File System" in the
+previous chart.
 
 ```{r monthly-storage}
 monthly_size <- query_prometheus_range(
@@ -189,7 +195,7 @@ monthly_size |>
   geom_line(aes(x = date, y = size)) +
   scale_x_datetime(date_breaks = "1 month", date_labels = "%B") +
   labs(
-    title = "Total size of user home directories in AWS EFS\nin the main Hub",
+    title = "Total size of user home directories in AWS EFS in the main Hub",
     x = "Month",
     y = "Total Size (GB)"
   )
@@ -197,16 +203,16 @@ monthly_size |>
 
 ## Detailed breakdown for the month of `r reporting_month`
 
-To understand more about usage and costs during the current month, 
+To understand more about usage and costs during the current month,
 we can look at daily usage metrics and costs.
 
 ### Home directory sizes
 
-The Hub can currently be accessed via two different "namespaces": "production" 
+The Hub can currently be accessed via two different "namespaces": "production"
 (or "prod"), and "workshop". The production namespace is where participants are
-given medium to long-term access, as NASA mentors, Champions participants, etc. 
-[Access is managed via GitHub](https://nasa-openscapes.github.io/earthdata-cloud-cookbook/policies-admin/add-folks-to-2i2c-github-teams.html) by assigning user's GitHub usernames to specific 
-teams. 
+given medium to long-term access, as NASA mentors, Champions participants, etc.
+[Access is managed via GitHub](https://nasa-openscapes.github.io/earthdata-cloud-cookbook/policies-admin/add-folks-to-2i2c-github-teams.html) by assigning user's GitHub usernames to specific
+teams.
 
 The "workshop" namespace is used specifically for large workshops and access
 is granted on the day of the workshop by use of a [shared password](https://nasa-openscapes.github.io/earthdata-cloud-cookbook/policies-admin/leading-workshops.html\#workshop-hub-access-via-shared-password) rather
@@ -292,7 +298,7 @@ all_dirs_sum_by_date |>
     breaks = setdiff(unique(all_dirs_sum_by_date$team), "workshop")
   ) +
   labs(
-    title = "Total size of user home directories by access team\nand Hub namespace",
+    title = "Total size of user home directories by access team and Hub namespace",
     x = "Date",
     y = "Size (GiB)",
     fill = "GitHub Team (production hub only)"
@@ -324,12 +330,12 @@ size_by_date_by_team |>
 
 When a user logs into the Hub, they can choose the amount of RAM and number of
 CPUs they would like to use, enabling them to scale computing power appropriate
-to the tasks they are running. More powerful compute resources have higher 
-[hourly costs](https://aws.amazon.com/ec2/pricing/on-demand/), so it is 
+to the tasks they are running. More powerful compute resources have higher
+[hourly costs](https://aws.amazon.com/ec2/pricing/on-demand/), so it is
 important to not choose a powerful instance when it isn't required.
 
-Examining both the usage and the costs of the [EC2 instance types](https://aws.amazon.com/ec2/instance-types/) that users choose 
-can help us understand users's needs as well as compute costs. This helps us 
+Examining both the usage and the costs of the [EC2 instance types](https://aws.amazon.com/ec2/instance-types/) that users choose
+can help us understand users's needs as well as compute costs. This helps us
 develop policies and recommendations for Hub compute usage.
 
 ```{r ec2-costs}
@@ -377,12 +383,12 @@ ec2_instance_type_costs_usage <- ec2_instance_type_costs_usage_res |>
   )
 ```
 
-The following plots show the usage and costs broken down by [instance type](https://aws.amazon.com/ec2/instance-types/). The 
-compute profiles that users can choose from run on `r5.xlarge` (4 CPUs, 32 GiB memory) or 
-`r5.4xlarge` (16 CPUs, 128 GiB memory) instances. 
+The following plots show the usage and costs broken down by [instance type](https://aws.amazon.com/ec2/instance-types/). The
+compute profiles that users can choose from run on `r5.xlarge` (4 CPUs, 32 GiB memory) or
+`r5.4xlarge` (16 CPUs, 128 GiB memory) instances.
 Note that during some large workshops, administrators will
-choose very large instance types (for example `r5.16xlarge`; 64 CPUs, 512 GiB memory) so they can 
-provision a small number of nodes with many users per node. This is more 
+choose very large instance types (for example `r5.16xlarge`; 64 CPUs, 512 GiB memory) so they can
+provision a small number of nodes with many users per node. This is more
 efficient than launching many nodes at once. Other instance types, such as
 `m6i.xlarge` indicate usage of the AWS infrastructure outside of the Hub, mostly
 using [coiled](https://openscapes.org/blog/2023-11-07-coiled-openscapes/).
@@ -403,7 +409,7 @@ ec2_usage_plot <- ggplot(ec2_usage_data, aes(x = start_date, y = UsageQuantity, 
     x = "Date",
     y = "Usage (hours)",
     fill = "EC2 Instance Type",
-    caption = "*Hub resource allocation options up to 3.7 CPUs run on\n 'r5.xlarge' instances, and those with up to 15.6 CPUs\n run on 'r5.4xlarge' instances."
+    caption = "*Hub resource allocation options up to 3.7 CPUs run on 'r5.xlarge' instances, and those with up to 15.6 CPUs run on 'r5.4xlarge' instances."
   )
 ```
 
@@ -428,7 +434,7 @@ ec2_usage_plot / ec2_cost_plot
 ```
 
 Finally, it is useful to look at the relationship between compute hours and
-total cost by instance type, to understand both the highest cost and highest 
+total cost by instance type, to understand both the highest cost and highest
 usage, as well as the cost-efficiency of the instance types.
 
 ```{r total-usage-vs-cost-by-instance}
@@ -445,7 +451,7 @@ ggplot(ec2_instance_data, aes(x = total_hours, y = total_cost, colour = instance
   scale_colour_discrete(type = aws_ce_palette(n_distinct(ec2_instance_data$instance_type))) +
   labs(
     title = glue::glue(
-      "Total cost vs hours on different EC2 instance types\nin {reporting_my}"
+      "Total cost vs hours on different EC2 instance types in {reporting_my}"
     ),
     x = "Total Hours",
     y = "Total Cost ($)"
